Clean up unused classes